...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="nw2-fr-WBN">
                                <rect key="frame" x="184" y="433" width="60" height="60"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gE2-El-9qo" userLabel="Login Button">
                                <rect key="frame" x="16" y="754" width="396" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" label="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Gch-0d-Pex"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="SFPro-Bold" family="SF Pro" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                                        <constraint firstItem="GLE-Rz-Dcp" firstAttribute="top" secondItem="Jyv-jJ-rvZ" secondAttribute="top" constant="4" id="j01-0T-17C"/>
                                                        <constraint firstItem="GLE-Rz-Dcp" firstAttribute="leading" secondItem="Jyv-jJ-rvZ" secondAttribute="leading" constant="8" id="rvQ-Cs-nQw"/>
                                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="GLE-Rz-Dcp" secondAttribute="trailing" constant="100" id="vmy-Ld-Ngm"/>
                                                        <constraint firstAttribute="bottom" secondItem="GLE-Rz-Dcp" secondAttribute="bottom" constant="8" id="ynz-2O-6gj"/>
                                                    </constraints>
                                                </view>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cxu-9V-N3Y" userLabel="favoritesButton">
                                                    <rect key="frame" x="368" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" label="favoritesButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="6BT-nj-yno"/>
                                                        <constraint firstAttribute="width" constant="44" id="dxm-SK-ggf"/>
                                                    </constraints>
...
                                <connections>
                                    <outlet property="delegate" destination="fYi-5e-VUW" id="611-vq-Qtl"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gad-mN-GwP" userLabel="Backward Button">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" label="backwardButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="NZv-zK-JqD"/>
                                    <constraint firstAttribute="width" constant="48" id="S5Q-no-ERq"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
